# app_library

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: b3b7ec57d57e_initial_migration.py  bb48c9ba385c_initial_migration.py  f07b7f8131c0_initial_migration.py  f9193961209b_add_author.py
src/: main.py
src/api/: deps.py  router.py
src/api/endpoints/: author.py  router.py  tag.py
src/core/: config.py
src/crud/: author.py  tag.py
src/db/: base.py  session.py  transactional.py
src/models/: __init__.py  author.py  base.py  tag.py
src/schemas/: author.py  tag.py
src/utils/: regex.py
