[tool.poetry]
name = "app-library"
version = "0.1.0"
description = ""
authors = ["ruben0894"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
dotenv = "^0.9.9"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
